# corpora-intersector

./: README.md  corpus_intersector.opam  dune-project
lib/: corpus.ml  corpus.mli  corpus_intersector.ml  corpus_intersector.mli  dune  file_io.ml  file_io.mli  tokenizer.ml  tokenizer.mli
samples/: corpus.txt  missing.txt  sentences.txt
test/: dune  test_corpus_intersector.ml
